--- a/less/components/consonant/wrapper.less
+++ b/less/components/consonant/wrapper.less
@@ -17,7 +17,6 @@
         &-inner {
             > *:last-of-type {
                 display: block;
-                min-height: @consonant-Wrapper-minHeight;
                 position: relative;
                 flex-grow: 1;
             }
@@ -56,10 +55,6 @@
         }
 
         @media @consonant-tablet-up {
-            &-inner > *:last-of-type {
-                min-height: 625px;
-            }
-
             &-collection {
                 margin-top: -4px;
             }
